--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+
 body {
     background-image: url("https://static.vecteezy.com/system/resources/thumbnails/002/007/746/small/cute-abstract-background-in-pastel-colors-vector.jpg");
     background-size: cover;
@@ -17,8 +18,8 @@ body {
 
 #description {
     font-weight: bold;
-    background-color: snow;
-    width: 1000px;
+    background-color: white;
+    width: 70%;
     border-radius: 20px;
     padding: 10px;
 }
@@ -26,20 +27,17 @@ body {
 #survey-form {
     display: flex;
     flex-direction: column;
+    flex-wrap: wrap;
     align-items: center;
-    border: 100px solid black;
-    border-radius: 20px;
-    margin: 50px;
-    padding: 200px;
+    padding: 5%;
 }
 
 label, p {
-    margin: 15px;
+    margin: 15px 0px 15px 0px;
 }
 
-
 #name {
-    width: 700px;
+    width: 100%;
     height: 20px;
     padding: 10px;
     border: 2px solid black;
@@ -47,7 +45,7 @@ label, p {
 }
 
 #email {
-    width: 700px;
+    width: 100%;
     height: 20px;
     padding: 10px;
     border: 2px solid black;
@@ -55,7 +53,7 @@ label, p {
 }
 
 #number {
-    width: 700px;
+    width: 100%;
     height: 20px;
     padding: 10px;
     border: 2px solid black;
@@ -63,10 +61,10 @@ label, p {
 }
 
 .p-bg {
-    background-color: snow;
+    background-color: white;
     padding: 10px;
     border-radius: 20px;
-    width: 550px;
+    width: 100%;
     margin-top: 30px;
     margin-bottom: 30px;
 }
@@ -80,7 +78,7 @@ label, p {
 
 
 #dropdown {
-    width: 720px;
+    width: 100%;
     height: 40px;
     padding: 10px;
     border: 2px solid black;
@@ -94,6 +92,7 @@ input[type = "radio"] {
 
 #radio label {
     font-weight: 400;
+    padding: 10px;
 }
 
 input[type="checkbox"] {
@@ -101,7 +100,7 @@ input[type="checkbox"] {
 }
 
 #textarea {
-    width: 700px;
+    width: 100%;
     height: 100px;
     border-radius: 10px;
     font-size: 1.2rem;
@@ -111,7 +110,7 @@ input[type="checkbox"] {
 #submit {
     margin-top: 50px;
     background-color: pink;
-    color: snow;
+    color: white;
     padding: 10px;
     width: 150px;
     font-size: 1.2rem;
@@ -123,3 +122,7 @@ input[type="checkbox"] {
     background-color: greenyellow;
 }
 
+
+html {
+    scroll-behavior: smooth;
+}
